# promise-cc

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/include/promise/: promise.h  promise.hpp  version.h  version.h.in
test/: CMakeLists.txt  test.cc
